# Meta-RL-Hakcathon

./: .dockerignore  .env.example  .gitignore  README.md  inference.py  openenv.yaml  pyproject.toml
heatshield_env/: __init__.py  client.py  graders.py  models.py  scenario_data.py
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py  heatshield_environment.py  requirements.txt
tests/: test_heatshield_env.py
