[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatshield-openenv"
version = "0.1.0"
description = "HeatShield urban heatwave response environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["heatshield_env", "server"]
package-dir = { "heatshield_env" = "heatshield_env", "server" = "server" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
